# task_manager

./: CMakeLists.txt  README.md  package.xml
base_system/: CMakeLists.txt  package.xml  rviz.rviz
base_system/launch/: classification_and_ṕose.launch  classification_only.launch  face_recognition.launch  navigation.launch  navigation_apollo.launch  navigation_jetson.launch  navigation_zeus.launch  poseandpoints_kinectjetson.launch  poseandpoints_only.launch  voice.launch  voice_emotion.launch  voice_question_answerer.launch  voice_stt.launch  voice_stt_tts_jetson.launch  voice_tts.launch
launch/: task_manager.launch
src/: coordinate_tasks.py
task_manager/: CMakeLists.txt  package.xml  requirements.txt  waypoints.yaml
task_manager/bt_src/: recognition.cpp  recognition.hpp  recognition.xml  recognitionMain.cpp
task_manager/launch/: GPSR.launch  answer_questions.launch  carry_my_luggage.launch  inspection.launch  llama_qa.launch  manipulation_and_object_recognition.launch  navigation_and_follow_me.launch  object_recognition_and_manipulation.launch  party_host.launch  personal_recognition.launch  receptionist.launch  recognition.launch  task_manager.launch
task_manager/src/: coordinate_tasks.py  follow_human.py  navigation_and_follow_me.py  party_host.py  personal_recognition.py  sm_answer_questions copy.py  sm_answer_questions.py  sm_inspection.py  sm_llama.py  sm_navigation_and_follow_me.py  sm_object_manipulation.py  sm_personal_recognition.py  smach_answer_questions.py  smach_example.py
